--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ lib64/
 parts/
 sdist/
 var/
+caches/
 wheels/
 pip-wheel-metadata/
 share/python-wheels/
@@ -91,3 +92,7 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
+
+# node.js
+node_modules/
+package-lock.json
